--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -7,191 +7,149 @@
     tools:context=".activities.edit_item_activity">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="86dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/upload_image_button"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_camera"
-        android:contentDescription="Image of your collectable" />
-
-    <Button
-        android:id="@+id/upload_image_button"
-        android:layout_width="187dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="183dp"
-        android:background="@drawable/rounded_button"
-        android:text="@string/upload_new_image_label"
+        android:id="@+id/item_detail_Image"
+        android:layout_width="410dp"
+        android:layout_height="342dp"
+        android:layout_marginStart="2dp"
+        android:src="@drawable/ic_baseline_camera_alt_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="11dp"
-        android:text="@string/sub_title_label"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_textview" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="7dp"
-        android:text="@string/description_label"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_dropdown" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="9dp"
-        android:text="@string/category_label"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sub_title_textview" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="19dp"
         android:text="@string/title_label"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/upload_image_button" />
-
-    <EditText
-        android:id="@+id/description_textview"
-        android:layout_width="330dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:background="@drawable/custom_input"
-        android:hint="Description of your collectable"
-        android:paddingLeft="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4">
-    </EditText>
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/custom_description_label"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
-
-    <Spinner
-        android:id="@+id/category_dropdown"
-        android:layout_width="330dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="7dp"
-        android:paddingLeft="10dp"
-        android:hint="Chose the category for your item"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <Button
-        android:id="@+id/discard_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="21dp"
-        android:background="@drawable/discard_button"
-        android:text="@string/discard_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_custom_button" />
+        app:layout_constraintTop_toBottomOf="@+id/item_detail_Image" />
 
     <EditText
         android:id="@+id/title_textview"
         android:layout_width="330dp"
         android:layout_height="30dp"
         android:layout_marginStart="42dp"
+        android:layout_marginEnd="43dp"
         android:background="@drawable/custom_input"
-        android:paddingLeft="10dp"
         android:hint="Title"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
+
     </EditText>
 
-    <Button
-        android:id="@+id/add_custom_button"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_button"
-        android:insetLeft="0dp"
-        android:insetTop="0dp"
-        android:insetRight="0dp"
-        android:insetBottom="0dp"
-        android:text="@string/plus_sign_label"
-        android:textSize="34sp"
+        android:text="@string/sub_title_label"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/title_textview" />
 
     <EditText
         android:id="@+id/sub_title_textview"
         android:layout_width="330dp"
         android:layout_height="30dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginEnd="43dp"
         android:background="@drawable/custom_input"
         android:hint="Sub-Title"
         android:paddingLeft="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
-    </EditText>
+        app:layout_constraintTop_toBottomOf="@+id/textView2"></EditText>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:text="@string/category_label"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sub_title_textview" />
+
+    <Spinner
+        android:id="@+id/category_dropdown"
+        android:layout_width="330dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginEnd="43dp"
+        android:hint="Choose a category"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:text="@string/description_label"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/category_dropdown" />
+
+    <EditText
+        android:id="@+id/description_textview"
+        android:layout_width="330dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginEnd="43dp"
+        android:background="@drawable/custom_input"
+        android:ems="10"
+        android:paddingLeft="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"></EditText>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/discard_button"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="43dp"
+        android:background="@drawable/discard_button"
+        android:text="@string/discard_label"
+        android:textColor="@color/white"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
 
     <Button
         android:id="@+id/add_button"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="16dp"
+        android:textSize="12dp"
         android:background="@drawable/rounded_button"
-        android:text="@string/update_label"
-        app:layout_constraintStart_toEndOf="@+id/discard_button"
+        android:text="@string/update_button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_textview" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="75dp"
-        android:text="ITEM"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/item_detail_btnEditItem"
+        android:layout_width="32dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="16dp"
+        android:foregroundTint="@color/infoColor"
+        android:src="@drawable/ic_baseline_edit_24"
+        app:civ_border_color="@color/infoColor"
+        app:civ_border_width="2dp"
+        app:layout_constraintBottom_toBottomOf="@+id/item_detail_Image"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
