--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,6 +40,14 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <ProgressBar
+            android:id="@+id/fragment_login_progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="24dp" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_textBoxEmail"
             android:layout_width="300dp"
