--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -61,6 +61,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="42dp"
         android:layout_marginEnd="43dp"
+        android:background="@drawable/custom_input"
         android:hint="Date"
         android:inputType="date"
         android:paddingLeft="10dp"
@@ -143,8 +144,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/item_add_image_btn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="32dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
         android:foregroundTint="@color/infoColor"
