--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:text="@string/sub_title_label"
+        android:text="DATE ADDED"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginStart="42dp"
         android:layout_marginEnd="43dp"
         android:background="@drawable/custom_input"
-        android:hint="Sub-Title"
+        android:hint="Date"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toBottomOf="@+id/description_textview" />
 
     <Button
-        android:id="@+id/add_button"
+        android:id="@+id/update_button"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
