--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -73,6 +73,7 @@
             android:hint="Password"
             android:minHeight="48dp"
             app:endIconMode="password_toggle"
+            app:passwordToggleEnabled="true"
             app:startIconContentDescription="Password"
             app:startIconDrawable="@drawable/ic_baseline_lock_24"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
