:sparkles: Initial Attempt at Analytics
got github repo for the bar graph and implemented it and tried to make a button that goes to the page so i can test but i think my emulatorstill kinda broke.

--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -195,6 +195,23 @@
                 android:text="@string/sign_out_button" />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/user_btnAnalyticsTest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="59dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="25dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_button"
+            android:maxWidth="250px"
+            android:text="Analytics"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.fragment.app.FragmentContainerView
