--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -7,9 +7,9 @@
     tools:context=".activities.edit_item_activity">
 
     <ImageView
-        android:id="@+id/item_detail_Image"
+        android:id="@+id/item_edit_Image"
         android:layout_width="410dp"
-        android:layout_height="342dp"
+        android:layout_height="300dp"
         android:layout_marginStart="2dp"
         android:src="@drawable/ic_baseline_camera_alt_24"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,92 +17,71 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="16dp"
         android:text="@string/title_label"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_detail_Image" />
+        app:layout_constraintTop_toBottomOf="@id/item_edit_Image" />
 
     <EditText
-        android:id="@+id/title_textview"
+        android:id="@+id/title_edit_textview"
         android:layout_width="330dp"
         android:layout_height="30dp"
         android:layout_marginStart="42dp"
-        android:layout_marginEnd="43dp"
+        android:layout_marginEnd="42dp"
         android:background="@drawable/custom_input"
         android:hint="Title"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@id/textView6">
 
     </EditText>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:text="@string/sub_title_label"
+        android:layout_marginTop="8dp"
+        android:text="DATE OF ACQUISITION"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_textview" />
+        app:layout_constraintTop_toBottomOf="@id/title_edit_textview" />
 
     <EditText
-        android:id="@+id/date_textview"
+        android:id="@+id/date_edit_textview"
         android:layout_width="330dp"
-        android:layout_height="30dp"
+        android:layout_height="45dp"
         android:layout_marginStart="42dp"
-        android:layout_marginEnd="43dp"
-        android:background="@drawable/custom_input"
-        android:hint="Sub-Title"
+        android:layout_marginEnd="42dp"
+        android:hint="Date"
+        android:inputType="date"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"></EditText>
+        app:layout_constraintTop_toBottomOf="@id/textView8"></EditText>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:text="@string/category_label"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
-
-    <Spinner
-        android:id="@+id/category_dropdown"
-        android:layout_width="330dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginEnd="43dp"
-        android:hint="Choose a category"
-        android:paddingLeft="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
+        android:layout_marginTop="8dp"
         android:text="@string/description_label"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_dropdown" />
+        app:layout_constraintTop_toBottomOf="@id/date_edit_textview" />
 
     <EditText
-        android:id="@+id/description_textview"
+        android:id="@+id/description_edit_textview"
         android:layout_width="330dp"
         android:layout_height="80dp"
         android:layout_marginStart="42dp"
@@ -112,44 +91,42 @@
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"></EditText>
+        app:layout_constraintTop_toBottomOf="@id/textView10"></EditText>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/discard_button"
+        android:id="@+id/edit_discard_button"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="43dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/discard_button"
         android:text="@string/discard_label"
         android:textColor="@color/white"
         android:textSize="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/add_button"
+        android:id="@+id/edit_button"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="16dp"
-        android:textSize="12dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/rounded_button"
-        android:text="@string/update_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_textview" />
+        android:text="@string/add_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/item_detail_btnEditItem"
-        android:layout_width="32dp"
-        android:layout_height="30dp"
+        android:id="@+id/item_edit_image_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
         android:foregroundTint="@color/infoColor"
         android:src="@drawable/ic_baseline_edit_24"
         app:civ_border_color="@color/infoColor"
         app:civ_border_width="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/item_detail_Image"
+        app:layout_constraintBottom_toBottomOf="@id/item_edit_Image"
         app:layout_constraintEnd_toEndOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
