--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -32,7 +33,9 @@
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/top_nav_height"
+        android:layout_marginBottom="@dimen/bottom_nav_height"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
         tools:layout_editor_absoluteX="10dp">
@@ -86,24 +89,9 @@
                     android:maxHeight="100dp"
                     android:src="@drawable/ic_boxes_image" />
 
-
             </RelativeLayout>
-
-
         </androidx.cardview.widget.CardView>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
-
-
         <androidx.cardview.widget.CardView
-
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_marginTop="80dp"
@@ -150,23 +138,9 @@
                     android:maxHeight="100dp"
                     android:src="@drawable/ic_box_image" />
 
-
             </RelativeLayout>
-
-
         </androidx.cardview.widget.CardView>
-
-
     </LinearLayout>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView2"
-        android:name="com.example.freightcrayt.fragments.BottomNav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/fragment_bottom_nav"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
