--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,14 +10,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/bottom_nav_height"
         android:paddingLeft="25dp"
         android:paddingTop="50dp"
-        android:paddingRight="25dp"
-        app:layout_constraintBottom_toTopOf="@id/user_detail_bottomNav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingRight="25dp">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -194,46 +192,7 @@
                 android:background="@drawable/discard_button"
                 android:text="@string/sign_out_button" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/user_btnAnalyticsTest"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="59dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="25dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_button"
-            android:maxWidth="250px"
-            android:text="Analytics"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/user_detail_bottomNav"
-        android:name="com.example.freightcrayt.fragments.BottomNav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" /><![CDATA[
-
-
-        android:id="@+id/coordinatorLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-
-
-
-    ]]>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/fragment_bottom_nav"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
