--- a/app/src/main/res/layout/collection_list_item.xml
+++ b/app/src/main/res/layout/collection_list_item.xml
@@ -35,7 +35,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:gravity="center_vertical"
             android:orientation="vertical"
             >
@@ -46,14 +46,16 @@
                 android:layout_height="wrap_content"
                 android:maxWidth="170dp"
                 android:textSize="20sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold">
+            </TextView>
 
             <TextView
                 android:id="@+id/personal_collectionItemCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxWidth="170dp"
-                android:textSize="16sp"></TextView>
+                android:textSize="16sp">
+            </TextView>
         </LinearLayout>
 
         <LinearLayout
