--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="408dp"
             android:src="@drawable/ic_baseline_camera_alt_24"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
