--- a/app/src/main/res/layout/collection_list_item.xml
+++ b/app/src/main/res/layout/collection_list_item.xml
@@ -29,8 +29,9 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"
-            tools:ignore="MissingClass" />
+            app:civ_border_color="#C1C1C1"
+            tools:ignore="MissingClass"
+            android:src="@drawable/ic_box_image"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
