--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -143,23 +143,36 @@
 
         <LinearLayout
             android:id="@+id/linearLayout4"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
-            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
+            <Button
+                android:id="@+id/user_analytics"
+                android:layout_width="25dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="25dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:maxWidth="250px"
+                android:text="analytics" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/user_signOut"
-                android:layout_width="150dp"
+                android:layout_width="25dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_weight="1"
                 android:background="@drawable/discard_button"
+                android:maxWidth="250px"
                 android:text="@string/sign_out_button" />
         </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include layout="@layout/fragment_bottom_nav"/>
